--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "axios": "^0.19.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^2.1.15"
+    "vuetify": "^0.15.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -29,7 +29,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^3.4.0",
+    "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -58,9 +58,9 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack": "^2.6.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
