--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "vuetify": "^0.15.2"
   },
   "devDependencies": {
+    "@mdi/font": "^4.7.95",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
