--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "css-mqpacker": "^7.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^0.15.2"
+    "vuetify": "^0.15.7",
+    "webpack-dev-server": "^2.9.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -59,6 +61,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^2.6.1",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
