--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^0.15.7",
+    "vuex": "^3.1.2",
+    "vuex-router-sync": "^5.0.0",
     "webpack-dev-server": "^2.9.1"
   },
   "devDependencies": {
